--- a/.github/workflows/daily_screen.yml
+++ b/.github/workflows/daily_screen.yml
@@ -2,9 +2,8 @@ name: Daily Stock Screener
 
 on:
   schedule:
-    # Runs at 04:00 UTC (9:30 AM IST) every day
-    - cron: '0 4 * * *'
-  workflow_dispatch: # Allows you to run it manually to test
+    - cron: '30 3 * * *' # Runs at 09:00 AM IST approx
+  workflow_dispatch:      # Allows manual testing button
 
 jobs:
   build:
@@ -16,7 +15,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: '3.9'
+          python-version: '3.10'  # Updated to fix the warning
 
       - name: Install dependencies
         run: |
@@ -28,4 +27,5 @@ jobs:
           TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
           SCREENER_COOKIE: ${{ secrets.SCREENER_COOKIE }}
           SCREENER_URL: ${{ secrets.SCREENER_URL }}
+          GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }} # <--- THIS WAS MISSING
         run: python main.py
